--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
       margin: 0;
       padding: 0;
       margin-top: 2cm; /* Top margin for the body */
-      height: 100%;
-      overflow-x: hidden; /* Prevent horizontal overflow */
     }
 
     /* Title and Subtitle Section */
@@ -37,6 +35,8 @@
       display: flex;
       justify-content: center;
       padding: 10px 0;
+      margin-left: 8cm;
+      margin-right: 8cm;
       margin-top: 2cm; /* Navbar should have a top margin of 2cm */
     }
     .navbar a {
@@ -56,25 +56,14 @@
       text-align: justify;
       margin-left: 8cm;
       margin-right: 8cm;
-      margin-top: 2cm;
-      overflow-y: auto;
-      max-height: 70vh; /* Limit content section height */
     }
 
-    /* Profile Photo (Fixed) */
-    .profile-container {
-      position: fixed;
-      top: 2cm; /* Fixed position with 2cm top margin */
-      left: 50%;
-      transform: translateX(-50%);
-      text-align: center;
-      width: 250px;
-    }
-
+    /* Profile Photo */
     .profile-photo {
-      width: 100%;
+      display: block;
+      margin: 20px auto;
+      width: 250px;
       height: auto;
-      border-radius: 50%;
     }
 
     /* Section Styles */
@@ -153,12 +142,6 @@
   <div class="title-section">Vikrant V Kamble</div>
   <div class="subtitle-section">PhD Student, Department of Economics, University of Delaware</div>
 
-  <!-- Profile Section (Fixed) -->
-  <div class="profile-container">
-    <img src="pic_t.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
-    <h1>Welcome! My name is Vikrant.</h1>
-  </div>
-
   <!-- Navbar -->
   <div class="navbar">
     <a href="#home" onclick="showSection('home')">Home</a>
@@ -171,6 +154,8 @@
   <div class="content">
     <!-- Home Section -->
     <div id="home" class="section active">
+      <img src="pic_t.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
+      <h1>Welcome! My name is Vikrant.</h1>
       <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, Education, Crime, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
       <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
       <p>Email: <a href="mailto:vvkamble@udel.edu">vvkamble@udel.edu</a></p>
@@ -208,8 +193,8 @@
       </ul>
       <p>Undergraduate Courses:</p>
       <ul>
-        <li>ECON100 | Introduction to Microeconomics | Spring 2022, Fall 2023</li>
-        <li>ECON200 | Principles of Microeconomics | Fall 2022, Spring 2023, Fall 2024</li>
+        <li>ECON301 | Intermediate Micro with Calculus | Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/" target="_blank">Dr. Desmond Toohey</a></li>
+        <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
       </ul>
       <h3>Guest Lectures</h3>
       <ul>
