--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 </head>
 <body>
   <!-- Title and Subtitle -->
-  <div class="title-section">Vikrant V Kamble</div>
+  <div class="title-section">Vikrant V. Kamble</div>
   <div class="subtitle-section">PhD Student, Department of Economics, University of Delaware</div>
 
   <!-- Navbar -->
@@ -191,11 +191,7 @@
         <li>ECON301 | Intermediate Micro with Calculus | Fall 2021 | <a href="https://www.udel.edu/faculty-staff/experts/desmond-toohey/" target="_blank">Dr. Desmond Toohey</a></li>
         <li>ECON304 | Quantitative Macroeconomic Theory | Spring 2023 | <a href="https://sites.google.com/site/hansaholter/" target="_blank">Dr. Hans A. Holter</a></li>
       </ul>
-      <h3>Guest Lectures</h3>
-      <ul>
-        <li>Instructor-led Sessions on Advanced DiD with Non-parallel Trends</li>
-      </ul>
-    </div>
+
 
     <!-- Resources Section -->
     <div id="resources" class="section">
