--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <div class="content">
     <!-- Home Section -->
     <div id="home" class="section active">
-      <img src="pic1.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
+      <img src="pic_t.png" alt="Profile photo of Vikrant Kamble" class="profile-photo">
       <h1>Welcome! My name is Vikrant.</h1>
       <p>I am a 4th-year PhD candidate in Economics at the University of Delaware, specializing in Labor, Health, Education, Crime, and Policy Evaluation across the USA and India. My research employs econometric techniques to understand policy impacts on communities, including studies on labor market behavior, career education outcomes, and Medicaid expansion effects on crime. My work has been published in Social Science Research. I use STATA, R, and Python for analysis.</p>
       <p>As a teaching assistant for undergraduate and graduate courses, I focus on causal inference methods, particularly advanced difference-in-differences (DiD) techniques. This experience has enhanced both my teaching abilities and technical expertise in causal methods.</p>
