--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     /* Fixed Header Container */
     .header-container {
       position: fixed;
-      top: 2cm;
+      top: 0; /* Stick to the very top */
       left: 0;
       right: 0;
       background-color: white;
       z-index: 1000;
+      padding: 10px 0; /* Optional: adjust padding for better spacing */
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Optional: adds a shadow */
     }
 
     /* Title Section */
@@ -67,7 +69,7 @@
       text-align: justify;
       width: calc(100% - 16cm); /* Adjusted for 8cm margins on each side */
       margin: 0 auto;
-      margin-top: calc(2cm + 200px); /* Space for fixed header */
+      margin-top: 100px; /* Adjusted for fixed header height */
     }
 
     /* Profile Photo */
@@ -103,7 +105,7 @@
     /* Mobile Responsive Design */
     @media (max-width: 768px) {
       .header-container {
-        top: 1cm;
+        top: 0; /* Stick to the very top */
       }
 
       .navbar {
@@ -113,7 +115,7 @@
       .content {
         width: 90%;
         padding: 10px;
-        margin-top: calc(1cm + 200px);
+        margin-top: 100px; /* Adjusted for fixed header height */
       }
 
       .profile-photo {
@@ -128,6 +130,7 @@
     }
   </style>
 </head>
+
 <body>
   <!-- Fixed Header Container -->
   <div class="header-container">
