--- a/index.html
+++ b/index.html
@@ -70,13 +70,14 @@
       margin-top: calc(2cm + 200px); /* Space for fixed header */
     }
 
-    /* Profile Photo */
-    .profile-photo {
-      display: block;
-      margin: 1.5cm auto 20px auto; /* Fixed 1.5cm top margin */
-      width: 250px;
-      height: auto;
-    }
+/* Profile Photo */
+.profile-photo {
+  float: left;
+  margin: 1.5cm 20px 20px 0; /* 1.5cm top margin, 20px right margin, and 20px bottom margin */
+  width: 250px;
+  height: auto;
+}
+
 
     /* Section Styles */
     .section {
